--- a/index.css
+++ b/index.css
@@ -405,7 +405,7 @@ body:not(.user-is-tabbing) a:focus {
 
 .header {
     background: linear-gradient(rgba(0,0,0, .1), rgba(0,0,0, .4)), 
-        url('./images/back_ground.jpg');
+        url('./images/peter-oswald-VdTQujcBk8s-unsplash.jpg');
     height: 100vh;
     background-size: cover;
     background-position: center;
